kubernetes/clusters/home/4-apps/utils/home-assistant/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: home-assistant-service
  namespace: utils

spec:
  selector:
    app: home-assistant

  ports:
    - port: 8123
      targetPort: 8123
      protocol: TCP

  type: ClusterIP
