kubernetes/clusters/home/4-apps/utils/home-assistant/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: home-assistant-ingress
  namespace: utils

  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"

spec:
  ingressClassName: nginx

  tls:
  - hosts:
      - homeassistant.alarlab.dev
    secretName: wildcard-alarlab-tls

  rules:
    - host: homeassistant.alarlab.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: home-assistant-service
                port:
                  number: 8123
